--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-data-table-component": "^7.6.2",
